fix: Increase page section spacing and make the title bold (#20)
* Adjust spacing and bold text

* Add h2 too

--- a/themes/juice/sass/juice.scss
+++ b/themes/juice/sass/juice.scss
@@ -48,10 +48,16 @@ header {
 
 h2 {
   scroll-margin-top: 90px;
+  font-weight: bold;
 }
 
 h1 {
   scroll-margin-top: 90px;
+  font-weight: bold;
+}
+
+p + h1 {
+  margin-top: 70px;
 }
 
 .logo {
